# ThesisHerald

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
src/thesisherald/: __init__.py  arxiv_client.py  bot.py  config.py  llm_client.py  main.py  scheduler.py
tests/: __init__.py  test_arxiv_client.py  test_config.py  test_llm_client.py
